# TinyBI

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_dashboard.py
.github/workflows/: python-tests.yml
data/raw/: noodle_database.csv
data/raw/tinyfish_debug/: cold_storage.json  fairprice.json  sheng_siong.json
frontend/: .env.example  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: DashboardHome.tsx  QueryPage.tsx  VectorIndexBuilderPage.tsx
notebooks/: data_cleaning_1_0.ipynb  eda_1_0.ipynb  financial_eda_1_0.ipynb  interface.ipynb  submission.ipynb
src/: config.py  main.py  web_dashboard.py
src/api/: main.py
src/api/routes/: __init__.py  query.py  vector.py
src/eval/: bare_config.yaml  heavy_config.yaml  provider.py
src/llms/: explainer.py  extractor.py  main_pipeline.py
src/tools/: query_tool.py
src/utils/: database.py  etl.py  models.py  prompts.py  pydantic_models.py  queries.py  sql_normaliser.py  validate_llm_output.py
src/utils/rag/: vector_controller.py  vector_index.py
src/utils/value_resolution/: column_resolver.py  resolution_service.py  value_resolver.py
tests/api/: test_query_api.py  test_vector_api.py
tests/llms/: test_pipeline.py
tests/tools/: test_query_tool.py
tests/utils/: test_column_resolver.py  test_database.py  test_db.py  test_models.py  test_pydantic_models.py  test_resolution_service.py  test_sql_normaliser.py  test_validate_llm_output.py  test_value_resolver.py  test_vector_controller.py  test_vector_index.py
(+1 files in other folders)
