[project]
name = "spx-automation-technical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that rely on external services or larger project resources",
]
